Issue#96 (#98)
* Replacing browser native date control with Material UI DatePicker and MomentJS

* Fixing the issue where newly added service not showing up after momentjs

* Better date controls everywhere

* Clearing the documents and services when landing on the page, to clear the past stale data

* removing unused prettifyDate

--- a/src/client/components/AddDocumentPage/AddDocumentPage.css
+++ b/src/client/components/AddDocumentPage/AddDocumentPage.css
@@ -1,5 +1,5 @@
 .add-document-page{
-    margin: 100px 16px 16px;
+    margin: 90px 16px 16px;
     .vehicle-name{
         height: 26px;
         width: 220px;
